--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -2,6 +2,7 @@
 @import url('./antd-reset.css');
 
 body {
+  -webkit-overflow-scrolling: touch;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
