--- a/src/components/ImgLoader/style.css
+++ b/src/components/ImgLoader/style.css
@@ -5,26 +5,26 @@
   &-img {
     overflow: hidden;
     img {
+      margin-top: -18%; /* 做简单的兼容，因为zhihu拿到的样式是px的 */
       width: 100%;
     }
   }
   &-title {
     position: absolute;
-    bottom: 20px;
-    max-height: 48px;
+    bottom: 40px;
+    padding: 0 40px;
     line-height: 1.2;
-    padding: 0 20px;
     color: #fff;
-    font-size: 18px;
+    font-size: 36px;
     font-weight: bold;
-    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   }
   &-source {
     position: absolute;
-    bottom: 10px;
-    right: 10px;
-    font-size: 9px;
+    bottom: 20px;
+    right: 20px;
+    font-size: 18px;
     color: rgba(255, 255, 255, 0.8);
-    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.3);
+    text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
   }
 }
