--- a/src/components/Story/style.css
+++ b/src/components/Story/style.css
@@ -1,30 +1,32 @@
+@import url('../../assets/css/border.css');
+
 .story {
   &Date {
-    height: 40px;
-    line-height: 40px;
+    height: 80px;
+    line-height: 80px;
     text-align: center;
     color: #fff;
-    font-size: 16px;
+    font-size: 32px;
     font-weight: 500;
     background: #2591D0;
   }
   &Item {
     display: flex;
-    padding: 20px 0;
-    margin: 0 20px;
-    border-bottom: 1px solid #eee;
+    padding: 40px 0;
+    margin: 0 40px;
+    background-image: svg(1px-border-bottom param(--color #eee));
     &:last-child {
-      border-bottom: none;
+      background-image: none;
     }
     &-title {
       flex: 1;
-      font-size: 16px;
+      font-size: 32px;
       font-weight: 500;
     }
     &-img {
-      width: 60px;
-      height: 60px;
-      margin-left: 20px;
+      width: 120px;
+      height: 120px;
+      margin-left: 40px;
     }
   }
 }
