--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -9,4 +9,5 @@ body {
   font-family: Helvetica Neue, Helvetica, PingFang SC, Hiragino Sans GB, Microsoft YaHei, Arial, sans-serif;
   color: #333;
   background: #fff !important;
+  font-size: 28px;
 }
