--- a/src/components/Story/style.css
+++ b/src/components/Story/style.css
@@ -23,10 +23,15 @@
       font-size: 32px;
       font-weight: 500;
     }
-    &-img {
+    &-lazy {
       width: 120px;
       height: 120px;
       margin-left: 40px;
+      background: #eee;
+    }
+    &-img {
+      width: 120px;
+      height: 120px;
     }
   }
 }
